--- a/templates/categories/edit.phtml
+++ b/templates/categories/edit.phtml
@@ -6,7 +6,8 @@
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" class="form-control" id="name"
-                           name="name" placeholder="type name" value="<?php echo $category->getName();?>">
+                           name="name" placeholder="type name"
+                           value="<?php echo $category->getName();?>">
                 </div>
                 <button type="submit" class="btn btn-default">Send</button>
             </form>
